# Assistant-dAide-a-lEnseignement-Primaire-Eveil-a-la-pensee-informatique-

./: .env  README.md  flux.py  index.py  main.py  pyproject.toml
PDF/: Description&Objectif.docx  Description_Agent_Rôle.docx  RAG.docx  Workflow.docx
static/images/marvel/: gru.avif  moana.avif
templates/: auth.html  home.html  index.html
