[project]
name = "projet-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "fpdf>=1.7.2",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pypdf>=6.10.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "tensorflow>=2.21.0",
    "werkzeug>=3.1.8",
]
